Fixed mobile nav on mobile

--- a/inc/css/header.css
+++ b/inc/css/header.css
@@ -16,11 +16,10 @@
 
 @media (max-width: 767px) {
     .header-contact-section {
-        left: auto;
-        width: 100%;
+        text-align: left;
+        left: 10px;
     }
 }
-
 .social-icons {
     text-align: center;
 }
